--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
 
   <link rel="stylesheet" href="css/font-awesome.css" type="text/css"></link>
   <!--Bootstrap-->
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="css/main.css" type="text/css"></link>
   <link rel="stylesheet" href="css/animate.css" type="text/css"></link>
   </head>
   <body>
-  
+
   <header class="header" id="header">
 	<div class="container header-style">
 		<h1>The benefits of drinking Tea</h1>
 	</div>
   </header>
-  
+
   <nav class="main-nav-outer" id="test"><!--main-nav-start-->
 	<div class="container">
         <ul class="main-nav">
@@ -44,7 +44,7 @@
 			<p class="bold">Health benefits of oolong tea include the reduction of chronic health conditions such as heart disease, inflammatory disorders, and high cholesterol levels, while providing vital antioxidants, promoting superior bone structure, robust skin and good dental health. Oolong tea is fragrant with a fruity flavor and a pleasant aroma. Despite its caffeine content, it can still be extremely relaxing to drink. The health benefits of oolong tea are basically doubled because of the combined qualities of black tea and green tea. According to the Tea Association of the United States, oolong tea falls somewhere between green and black teas, as its leaves are only partially oxidized. There are numerous kinds of tea in this world; but oolong tea might be one of the most beneficial. The origins of oolong tea date back almost 400 years, when it found wide usage in China. It is a semi-green fermented tea, but the fermentation process is halted as soon as the tea leaves start to change their color.</p>
 		<h4 class="bold" id="benefits">The various health benefits of oolong tea are as follows:</h4>
 		<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
- 
+
  <div class="panel panel-default">
     <div class="panel-heading" role="tab" id="headingOne">
       <h4 class="panel-title">
@@ -58,7 +58,7 @@
 The polyphenol compound found in oolong tea is very effective in controlling the metabolism of fat in the body. It activates certain enzymes, thereby enhancing the functions of fat cells in the body. It is commonly believed that daily consumption of oolong tea can reduce obesity. More widespread studies need to be done on humans, but early studies are very promising. In one animal study, mice that were given polyphenols in addition to a high-fat and high-sugar diet still showed a decline in overall body weight and fat index. Some earlier studies actually showed that the caffeine content was the active ingredient behind the weight loss, but it now appears to be mainly due to polyphenols. Apparently, the active components in oolong tea make fat work for you!      </div>
     </div>
   </div>
-  
+
   <div class="panel panel-default">
     <div class="panel-heading" role="tab" id="headingTwo">
       <h4 class="panel-title">
@@ -111,7 +111,7 @@ The antioxidants present in oolong tea protect teeth against decay, strengthen t
 Oolong tea is used as an herbal brew for treating type-2 diabetic disorders and as an addition to other supplementary drugs for treating that disease. It regulates the amount of blood sugar and insulin that is in the bloodstream at any one time, so the dangerous dips and spikes in blood sugar that can be so disastrous for diabetic patients was reduced. A 2003 study showed that when combined with regular hyperglycemic drugs, oolong tea further balanced the blood sugar levels and prevented the sudden drops in almost all of the test subjects.      </div>
     </div>
   </div>
-  
+
   <div class="panel panel-default">
     <div class="panel-heading" role="tab" id="headingSix">
       <h4 class="panel-title">
@@ -125,7 +125,7 @@ Oolong tea is used as an herbal brew for treating type-2 diabetic disorders and 
 It is well-known fact that tea drinkers have a lower risk of getting skin cancer. Moreover, polyphenolic compound in oolong tea promotes apoptosis in stomach related cancerous growths. This polyphenol extract also acts a chemo-preventive instrument against the development of other cancerous forms. The compounds stifle the activation of carcinogenic cells, prevent the formation of N-nitroso compounds, and trap genotoxic agents before they can become effective.      </div>
     </div>
   </div>
-  
+
   <div class="panel panel-default">
     <div class="panel-heading" role="tab" id="headingSeven">
       <h4 class="panel-title">
@@ -139,7 +139,7 @@ It is well-known fact that tea drinkers have a lower risk of getting skin cancer
 In a detailed study conducted at the Osaka Institute for Health Care Science in Japan, the experimental mice that ingested oolong tea showed a remarkable improvement in their stress levels by 10 to 18 %. The natural polyphenols in the oolong tea was cited as the main cause of it being such a stress-buster. Also, the L-theanine found in tea leaves is an amino acid that blocks L-glutamic acid to glutamate receptors in the brain. This would normally cause cortical neuron excitement, which leads to increased cognitive activity and neural stress responses. Since this amino acid binds to those sites, excitation doesn’t occur, and stress decreases because you are more able to keep your mind at rest.    </div>
     </div>
   </div>
-  
+
   <div class="panel panel-default">
     <div class="panel-heading" role="tab" id="headingEight">
       <h4 class="panel-title">
@@ -153,7 +153,7 @@ In a detailed study conducted at the Osaka Institute for Health Care Science in 
 Health benefits of oolong tea include improved mental performance and alertness. Regular intake of caffeine rich oolong tea may help in improving mental performance and maintaining alertness throughout the day.    </div>
   </div>
   </div>
-  
+
   <div class="panel panel-default">
     <div class="panel-heading" role="tab" id="headingNine">
       <h4 class="panel-title">
@@ -239,7 +239,7 @@ Despite all of these very important effects, it is important to remember that oo
 			<p class="bold">Have you ever heard people criticizing your choices in having caffeinated drinks like tea and coffee? Though over-indulging in anything will have negative consequences, having an extra cup of black tea might not be as bad as you might have imagined. Personally I love my perfect cup of tea. It’s how I like to begin my day—not to help me wake up, but rather I like to enjoy a tasteful cup of bliss first thing in the morning. When it comes to herbal, green or black tea, different things suit different people and a doctor’s recommendation should never be overlooked, but for most of us, indulging in a cup or two of black tea might in fact be a healthy life choice, as some studies have shown. Both green and black tea are made from a shrub called Camellia Sinesis, but with different processing methods. In addition to the leaves being withered, rolled and heated, black tea leaves are fermented before the final heating process. Below are 11 health benefits of having a cup or two of black tea on a regular basis, though it should be noted that it is recommended that black tea should be consumed without any additives like milk or sugar to truly harness its benefits.</p>
 		<h4 class="bold" id="benefits">The various health benefits of oolong tea are as follows:</h4>
 		<div class="panel-group" id="accordion1" role="tablist" aria-multiselectable="true">
-		
+
   <div class="panel panel-default">
     <div class="panel-heading" role="tab" id="headingOne2">
       <h4 class="panel-title">
@@ -254,8 +254,8 @@ Despite all of these very important effects, it is important to remember that oo
  </div>
     </div>
   </div>
-  
-  
+
+
   <div class="panel panel-default">
     <div class="panel-heading" role="tab" id="headingTwo2">
       <h4 class="panel-title">
@@ -270,7 +270,7 @@ Despite all of these very important effects, it is important to remember that oo
 	  </div>
   </div>
   </div>
-  
+
   <div class="panel panel-default">
     <div class="panel-heading" role="tab" id="headingThree2">
       <h4 class="panel-title">
@@ -285,7 +285,7 @@ Despite all of these very important effects, it is important to remember that oo
 	  </div>
   </div>
   </div>
-  
+
   <div class="panel panel-default">
     <div class="panel-heading" role="tab" id="headingFour2">
       <h4 class="panel-title">
@@ -299,7 +299,7 @@ Despite all of these very important effects, it is important to remember that oo
 Though a lot more research is required to confidently suggest cancer prevention techniques, some research over the years suggests that antioxidants like polyphenol and catechins in tea may help prevent some types of cancer. It has been suggested that women who drink black tea regularly have a lower chance of ovarian cancer than their counterparts.    </div>
   </div>
   </div>
-  
+
   <div class="panel panel-default">
     <div class="panel-heading" role="tab" id="headingFive2">
       <h4 class="panel-title">
@@ -313,7 +313,7 @@ Though a lot more research is required to confidently suggest cancer prevention 
 It has also been suggested that regular tea drinkers have stronger bones and lower probability of developing arthritis due to the phytochemicals found in tea.    </div>
   </div>
   </div>
-  
+
   <div class="panel panel-default">
     <div class="panel-heading" role="tab" id="headingSix2">
       <h4 class="panel-title">
@@ -327,7 +327,7 @@ It has also been suggested that regular tea drinkers have stronger bones and low
 Based on a research study conducted of elderly people living in the Mediterranean islands it was discovered that people that had been consuming black tea on a long-term basis on a moderate level (i.e 1-2 cups a day) had a 70% lower chance of having or developing type 2 diabetes.    </div>
   </div>
   </div>
-  
+
   <div class="panel panel-default">
     <div class="panel-heading" role="tab" id="headingSeven2">
       <h4 class="panel-title">
@@ -341,7 +341,7 @@ Based on a research study conducted of elderly people living in the Mediterranea
 We all are aware and well experienced about the calming and relaxing benefits of black tea. Not only does it help slow you down after a long day, studies show that the amino acid L-theanine found in black tea can help you relax and concentrate better. Black tea has also been shown to reduce levels of the stress hormone cortisol when consumed in moderate amounts on a regular basis.    </div>
   </div>
   </div>
-  
+
   <div class="panel panel-default">
     <div class="panel-heading" role="tab" id="headingEight2">
       <h4 class="panel-title">
@@ -355,7 +355,7 @@ We all are aware and well experienced about the calming and relaxing benefits of
 Black tea contains alkylamine antigens that help boost our immune response. In addition it also contains tannins that have the ability to fight viruses and hence keep us protected from influenza, stomach flu and other such commonly found viruses in our everyday lives.  </div>
   </div>
   </div>
-  
+
   <div class="panel panel-default">
     <div class="panel-heading" role="tab" id="headingNine2">
       <h4 class="panel-title">
@@ -378,7 +378,7 @@ Despite all of these very important effects, it is important to remember that oo
         </a>
       </h4>
     </div>
-	
+
     <div id="collapseten2" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingten2">
       <div class="panel-body">
 Unlike other drinks that have a relatively higher caffeine content, the low amounts found in tea can help enhance blood flow to the brain without over-stimulating the heart. It also stimulates the metabolism and respiratory system, as well as the heart and the kidneys.</div>
